--- a/flight_logbook/res/values/strings_en.arb
+++ b/flight_logbook/res/values/strings_en.arb
@@ -35,5 +35,7 @@
   "flightFieldLabel_departureAirport": "Departure Airport",
   "flightFieldLabel_arrivalAirport": "Arrival Airport",
   "flightFieldLabel_aircraftType": "Aircraft Type",
-  "flightFieldLabel_aircraftRegistration": "Aircraft Registration"
+  "flightFieldLabel_aircraftRegistration": "Aircraft Registration",
+
+  "mandatory": "(mandatory)"
 }
