--- a/flight_logbook/res/values/strings_en.arb
+++ b/flight_logbook/res/values/strings_en.arb
@@ -27,6 +27,8 @@
     "placeholders": {}
   },
 
+  "logout": "Logout",
+
   "actionLabel_add": "Add",
 
   "flightFieldLabel_departureDate": "Date",
