--- a/flight_logbook/res/values/strings_ja.arb
+++ b/flight_logbook/res/values/strings_ja.arb
@@ -31,7 +31,12 @@
 
   "logout": "ログアウト",
 
+  "dialog_title_confirmation": "確認",
+  "confirm_logout": "ログアウトしますか？",
+  "confirm_delete_flight": "フライトを削除しますか？",
+
   "actionLabel_add": "追加",
+  "actionLabel_delete": "削除",
 
   "flightFieldLabel_departureDate": "搭乗日",
   "flightFieldLabel_airline": "航空会社",
