フライト追加のロジックをBloCで実装しました。

--- a/flight_logbook/res/values/strings_en.arb
+++ b/flight_logbook/res/values/strings_en.arb
@@ -31,9 +31,13 @@
 
   "logout": "Logout",
 
+  "dialog_title_error": "Error",
   "dialog_title_confirmation": "Confirmation",
   "confirm_logout": "Logout?",
   "confirm_delete_flight": "Delete this flight?",
+
+  "error_failed_to_add_flight": "Failed to add flight.",
+  "error_empty_field": "${label} is  mandatory.",
 
   "actionLabel_add": "Add",
   "actionLabel_delete": "Delete",
