設定画面を追加し、カラースキームを選択できるようにしました。

--- a/flight_logbook/res/values/strings_en.arb
+++ b/flight_logbook/res/values/strings_en.arb
@@ -50,5 +50,11 @@
   "flightFieldLabel_aircraftType": "Aircraft Type",
   "flightFieldLabel_aircraftRegistration": "Aircraft Registration",
 
-  "mandatory": "(mandatory)"
+  "mandatory": "(mandatory)",
+
+  "settings": "Settings",
+
+  "settingLabel_colorScheme": "Color scheme",
+  "settingValue_colorScheme_ana": "ANA",
+  "settingValue_colorScheme_jal": "JAL",
 }
